# auto-unpack

./: .env  .formatignore  .gitignore  404.html  LICENSE  PYPI_README.md  README.md  auto-unpack.xml  clear.bat  config.py  config.yaml  core.py  exception.py  index.html  job.py  log.py  main.bat  main.py  mkdocs.yml  passwords.txt  pyproject.toml  readme.md  report.txt  schema.py  sitemap.xml  utils.py
.github/workflows/: publish-package.yaml  publish-page.yaml  update-schema.yaml
about/: index.html
archive/base/: hello-7z  hello-p-7z  hello-p.rar  hello.rar  icon.7z
archive/rename/: icon-v.7z.001  icon-v.7z.002删除  icon-v.7z.003删除
assets/: style.css
auto_unpack/: __init__.py  app.py  args.py  cli.py  config.py  constant.py  env.py  plugin.py  release.json  schema.py  store.py  template.json
auto_unpack/plugin/: archive.py  empty.py  log.py  remove.py  rename.py  scan.py  template.py  transfer.py
auto_unpack/plugin/control/: filter.py  loop.py  merge.py  switch.py
auto_unpack/plugins/: archive.py  empty.py  flat.py  log.py  remove.py  rename.py  scan.py  template.py  transfer.py
auto_unpack/plugins/control/: filter.py  loop.py  merge.py  switch.py
auto_unpack/template/backend-service/: README.md  _gitignore  banner.txt  passwords.txt  pyproject.toml
auto_unpack/template/backend-service/config/: application.prod.yaml
auto_unpack/template/custom-plugin/: .env  README.md  pyproject.toml
auto_unpack/template/custom-plugin/app/: schema.py
auto_unpack/template/custom-plugin/config/: application.prod.yaml  application.yaml
auto_unpack/template/custom-plugin/plugins/: print.py
auto_unpack/template/simple-project/: README.md  pyproject.toml
auto_unpack/template/simple-project/config/: application.yaml
auto_unpack/util/: config.py  download.py  exec.py  file.py  logging.py  sevenzip.py  unrarport.py
auto_unpack/util/lib/: 7-zip.chw
auto_unpack/util/lib/RAR_macOS/: default.sfx  rar
auto_unpack/util/sevenzip/: __init__.py  exec.py  result.py
auto_unpack/util/sevenzip/lib/linux/amd/x86/: 7zzs
auto_unpack/util/sevenzip/lib/linux/arm/x86/: 7zzs
config/: application.base.yaml  application.filter-size.yaml  application.filter.yaml  application.list.yaml  application.loop.yaml  application.many.yaml  application.rename.yaml  application.switch.yaml  application.test.yaml  application.yaml  logging.yaml
custom-plugin/: index.html
docs/: custom-plugin.md  index.md  plugin.md  schema.md  tree.md
docs/material/overrides/: home.html  main.html
docs/page/: about.md  schema.md  start.md
docs/page/examples/: .pages  base.md  list-archive.md  loop-archive.md  loop.md  rename.md
docs/page/plugins/: custom.md
docs/page/plugins/builtin/: archive.md  empty.md  flat.md  log.md  remove.md  rename.md  scan.md  transfer.md
docs/page/plugins/builtin/control/: filter.md  loop.md  merge.md  switch.md
docs/plugin/: archive.md  empty.md  flat.md  index.md  log.md  remove.md  rename.md  scan.md  transfer.md
docs/plugin/control/: filter.md  loop.md  merge.md  switch.md
examples/base/: index.html
examples/loop/: index.html
examples/rename/: index.html
pack/: hello world 7z
plugin/: index.html
plugin/archive/: index.html
plugin/control/filter/: index.html
plugin/control/loop/: index.html
plugin/control/merge/: index.html
plugin/control/switch/: index.html
plugin/empty/: index.html
plugin/flat/: index.html
plugin/log/: index.html
plugin/remove/: index.html
plugin/rename/: index.html
plugin/scan/: index.html
plugin/transfer/: index.html
plugins/builtin/archive/: index.html
plugins/builtin/control/filter/: index.html
plugins/builtin/control/loop/: index.html
plugins/builtin/control/merge/: index.html
plugins/builtin/control/switch/: index.html
plugins/builtin/empty/: index.html
plugins/builtin/flat/: index.html
plugins/builtin/log/: index.html
plugins/builtin/remove/: index.html
plugins/builtin/rename/: index.html
plugins/builtin/scan/: index.html
plugins/builtin/transfer/: index.html
plugins/custom/: index.html
release/template/backend-service/: README.md  auto-unpack.xml  pyproject.toml
release/template/backend-service/app/: job.py
release/template/backend-service/config/: application.prod.yaml  application.yaml  logging.yaml
release/template/custom-plugin/: README.md  pyproject.toml
release/template/custom-plugin/plugins/: print.py
release/template/custom-plugin/schema/: auto-unpack-flow-schema.json
release/template/simple-project/: pyproject.toml
release/template/simple-project/app/: __main__.py
schema/: auto-unpack-flow-schema.json  auto-unpack-schema.json  examples-schema.json  index.html
schema/2.12.0/: auto-unpack-flow-schema.json  auto-unpack-schema.json
schema/2.6.0/: auto-unpack-flow-schema.json  auto-unpack-schema.json
schema/2.8.0/: auto-unpack-flow-schema.json
schema/2.9.0/: auto-unpack-flow-schema.json
script/: examples.py  release.py  schema.py  template.py
search/: search_index.json
start/: index.html
tree/: index.html
unpack/hello world 7z/: hello world.txt
util7zip/: __init__.py  result.py  util7z.py  util_7z.py  utils.py
