[project]
name = "auto_unpack"
version = "2.0.0"
description = "压缩包自动解压工具，支持多种压缩包格式。通过组合各种插件，编排流程，则可满足日常解压需求。"
authors = [{ name = "xiaohuohumax" }]
dependencies = [
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "ruamel-yaml>=0.18.6",
    "apscheduler>=3.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["auto_unpack"]
include = ["auto_unpack", "README.md", "LICENSE"]

[tool.rye.scripts]
start = "python -m main"
job = "python -m job"
