[project]
name = "auto_unpack"
version = "2.12.0"
description = "压缩包自动解压工具，支持多种压缩包格式。通过组合各种插件，编排流程，则可满足日常解压需求。"
authors = [{ name = "xiaohuohumax" }]
dependencies = [
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "ruamel-yaml>=0.18.6",
    "inquirer>=3.3.0",
]
readme = "PYPI_README.md"
requires-python = ">= 3.8"
keywords = [
    "auto-unpack",
    "unpack",
    "auto",
    "compress",
    "archive",
    "plugin",
    "flow",
    "schedule",
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/xiaohuohumax/auto-unpack#readme"
Source = "https://github.com/xiaohuohumax/auto-unpack"
Tracker = "https://github.com/xiaohuohumax/auto-unpack/issues"

[project.scripts]
auto-unpack = "auto_unpack.cli:main"

[build-system]
# 新版 Hatch 与 rye 的 twine 不兼容 Metadata-Version 异常，暂时使用旧版
# 参考：https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mkdocs-material>=9.5.29",
    "mkdocs>=1.6.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "watchdog>=4.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["auto_unpack"]

[tool.hatch.build]
include = [
    "auto_unpack",
    "docs",
    "PYPI_README.md",
    "LICENSE",
    "logo.png",
    "logo-dark.png",
]
exclude = ["__pycache__", ".cache"]

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# default = true

[tool.rye.scripts]
start = "python -m main"
docs = "mkdocs serve"
build-docs = "mkdocs build"
schema = "python -m script.schema"
examples = "python -m script.examples"
cli = "python -m auto_unpack.cli"
template = "python -m script.template"
release = "python -m script.release"
