[project]
name = "backend-service"
version = "0.1.0"
description = "后台服务模板"
authors = [{ name = "xiaohuohumax" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = ["auto-unpack>=2.6.0", "apscheduler>=3.10.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.rye.scripts]
job = "python -m app.job"
