[project]
name = "custom-plugin"
version = "0.1.0"
description = "自定义插件模板"
authors = [{ name = "xiaohuohumax" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = ["auto-unpack>=2.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.rye.scripts]
start = "python -m app"
schema = "python -m app.schema"
